--- a/NomesDaHistoriaApp/NomesDaHistoriaApp/Web.config
+++ b/NomesDaHistoriaApp/NomesDaHistoriaApp/Web.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="NomesDaHistoriaApp.Properties.Settings.dbuser" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\NomesHistoriaDB.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
