--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
@@ -111,17 +111,20 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Ajudas.cs" />
     <Compile Include="Models\Apresentacoes.cs" />
     <Compile Include="Models\Aulas.cs" />
-    <Compile Include="Models\DataContexts\AulasDBContext.cs" />
+    <Compile Include="Models\DataContexts\AulasDB.cs" />
     <Compile Include="Models\Multimedia.cs" />
     <Compile Include="Models\Perguntas.cs" />
     <Compile Include="Models\DataContexts\PerosnagensDBContext.cs" />
     <Compile Include="Models\Personagen.cs" />
+    <Compile Include="Models\UtilizadorDBContext.cs" />
+    <Compile Include="Models\Utilizador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -142,7 +145,9 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\User\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
