--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Web.config
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Web.config
@@ -56,5 +56,7 @@
     <add name="AulaDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="AulasDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="PerosnagensDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="UtilizadorDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AulasDB" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
