para ver como se faz para o prximo

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/bin/NomesdaHistoriaApp.dll.config
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/bin/NomesdaHistoriaApp.dll.config
@@ -53,10 +53,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AulaDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="AulasDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="PerosnagensDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="UtilizadorDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="AulasDB" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="UtilizadoresDBcontext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
