funciona sim, pelo menos para ja..

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
@@ -144,6 +144,7 @@
     <Content Include="Views\Home\_ListEtapas.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Personagen\MostraTutor.cshtml" />
+    <Content Include="Views\Home\Register.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
