--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/NomesdaHistoriaApp.csproj
@@ -102,6 +102,9 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="ClassDiagram1.cd" />
+    <Content Include="ClassDiagram2.cd" />
+    <Content Include="ClassDiagram3.cd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -123,13 +126,16 @@
     <Compile Include="Models\Ajudas.cs" />
     <Compile Include="Models\Apresentacoes.cs" />
     <Compile Include="Models\Aulas.cs" />
+    <Compile Include="Models\DataContexts\AulasDbContext.cs" />
+    <Compile Include="Models\Avaliacoes.cs" />
+    <Compile Include="Models\Conquistas.cs" />
     <Compile Include="Models\DataContexts\AulasDB.cs" />
     <Compile Include="Models\Multimedia.cs" />
     <Compile Include="Models\Perguntas.cs" />
     <Compile Include="Models\DataContexts\PerosnagensDBContext.cs" />
     <Compile Include="Models\Personagen.cs" />
     <Compile Include="Models\Utilizadores.cs" />
-    <Compile Include="Models\UtilizadoresDBcontext.cs" />
+    <Compile Include="Models\DataContexts\UtilizadoresDBcontext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
