ambientes de aula

--- a/NomesdaHistoriaApp/NomesdaHistoriaApp/Web.config
+++ b/NomesdaHistoriaApp/NomesdaHistoriaApp/Web.config
@@ -53,10 +53,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-   
     <add name="PerosnagensDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="AulasDB" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UtilizadoresDBcontext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="AulasDbContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AmbientedeAulaDBContext" connectionString="data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\NomesHistoriaDB.mdf;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
